syntax = "proto3";

package user;

option go_package = "github.com/e-commerce-microservices/user-service";

message UserProfile {
  string user_name = 1;
  string phone = 2;
  string avatar = 3;
}

message UserAddress {
  string address = 1;
  string note = 2;
}

enum UserRole {
  Customer = 0;
  Seller = 1;
  Admin = 2;
}

message User {
  int64 id = 1;
  string email = 2;
  UserRole role = 3;
  bool active_status = 4;
  UserProfile profile = 5;
  repeated UserAddress address = 6;
}
