syntax = "proto3";

package user;

import "google/protobuf/empty.proto";
import "user_message.proto";

option go_package = "github.com/e-commerce-microservices/user-service";

message GeneralResponse {
  string message = 1;
  int32 status_code = 2;
}
message UserID { int64 user_id = 1; }

message UpdateRoleRequest { UserRole new_role = 1; }

message UpdateEmailRequest {
  int64 user_id = 1;
  string new_email = 2;
}

message UpdatePasswordRequest { int64 user_id = 1; }

service UserService {
  rpc CreateUser(User) returns (GeneralResponse) {}
  rpc ActiveUser(google.protobuf.Empty) returns (GeneralResponse) {}
  rpc DeleteUser(google.protobuf.Empty) returns (GeneralResponse) {}

  rpc GetMe(google.protobuf.Empty) returns (User) {}

  rpc UpdateEmail(UpdateEmailRequest) returns (GeneralResponse) {}

  rpc UpdateProfile(UserProfile) returns (GeneralResponse) {}

  rpc AddAddress(UserAddress) returns (GeneralResponse) {}
  rpc UpdateAddress(UserAddress) returns (GeneralResponse) {}

  rpc UpdateRole(UpdateRoleRequest) returns (GeneralResponse) {}

  rpc UpdatePassword(UpdatePasswordRequest) returns (GeneralResponse) {}

  rpc ReportSupplier(UserID) returns (GeneralResponse) {}
}

service AdminService {
  rpc BlockUser(UserID) returns (GeneralResponse) {}
}